<resources>
    <plurals name="point_count">
        <item quantity="one">%1$d point</item>
        <item quantity="other">%1$d points</item>
    </plurals>

    <plurals name="waypoint_count">
        <item quantity="one">%d waypoint</item>
        <item quantity="other">%d waypoints</item>
    </plurals>
    <string name="app_name" translatable="false">GPX Recorder</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- Alert stuff -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_recording_configuration">New Recording</string>
    <string name="denied_alert_title">Permissions Required</string>
    <string name="denied_alert_message">Cannot record GPX tracks without location permissions</string>
    <string name="denied_alert_button">Grant permissions</string>

    <!-- Strings related to Settings -->

    <string name="file_share_failed">Something went wrong while trying to share the file.</string>
    <string name="file_save_failed">Something went wrong while trying to save the file.</string>
    <string name="done">done</string>
    <string name="add_note_hint">Add note…</string>

    <string name="add_title_hint">Add title…</string>
    <string name="add_waypoint">Add Waypoint</string>
    <string name="background_location_justification_desc">This app collects location data to enable the route recorder function even when the app is closed or not in use. The app will attempt to show a notification whenever collecting data but it may not appear depending on the notification preferences on your device.\n\n Your location will ONLY be collected while you are recording a route.</string>
    <string name="background_location_justification_title">Background Location Access</string>
    <string name="background_permission_title">Allow all the time</string>
    <string name="battery_drain_warning">Intervals shorter than 1 minute may cause battery drain</string>
    <string name="calculating_placeholder">calculating..</string>
    <string name="cannot_create_waypoint">Cannot create waypoint at this time</string>
    <string name="channel_description">Control current recording session</string>
    <string name="channel_name">Recording</string>
    <string name="clear_all_alert_button">Clear All</string>
    <string name="clear_all_alert_message">This action will remove all recordings and cancel the current recording</string>
    <string name="clear_all_alert_title">Warning</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="delete_recording_alert_message">This action cannot be undone</string>
    <string name="delete_recording_alert_title">Are you sure you want to delete this route?</string>
    <string name="delete_recordings">Delete Recordings</string>
    <string name="denied_alert_message_background">If \"%1$s\" location permission isn\'t granted, the app won\'t be able to record your route.   The app will only access your location when you are recording a route.</string>
    <string name="developer_contact">Developer Contact</string>
    <string name="distance_km">%.2f km</string>
    <string name="edit_title_content_description">Edit title</string>
    <string name="enter_title">Enter Title</string>
    <string name="error">Error</string>
    <string name="expand">Expand</string>
    <string name="failed_to_place_waypoint">Failed to place waypoint</string>
    <string name="github" translatable="false">Github</string>
    <string name="gpx_recorder" translatable="false">GPX Recorder</string>
    <string name="how_often_to_record_track_points">How often to record track points. (Approximately)</string>
    <string name="init_error_message">Please check application file permissions and try again.   Note: This app doesn\'t support rooted devices and must be installed from the Google Play Store.  If this problem persists, contact the developer.  appdev.iboism@gmail.com</string>
    <string name="init_error_title">Failed to Initialize Local Database</string>
    <string name="interval_minutes">Interval</string>
    <string name="legal">Legal</string>
    <string name="new_recording">New Recording</string>
    <string name="notification_recording_in_progress">Location recording in progress</string>
    <string name="notification_recording_paused">Location recording paused</string>
    <string name="notification_title" translatable="false">GPX Recorder</string>
    <string name="okay">Okay</string>
    <string name="open_source_license_info">Open Source License Info</string>
    <string name="pause_recording">Pause</string>
    <string name="points">points</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="recording_in_progress">Recording in progress</string>
    <string name="resume_recording">Resume</string>
    <string name="save">Save…</string>
    <string name="share">Share</string>
    <string name="shortcut_label">Start recording</string>
    <string name="start">Start</string>
    <string name="stop_recording">Stop</string>
    <string name="title">Title</string>
    <string name="email">Email</string>
    <string name="hour_initial">h</string>
    <string name="minute_initial">m</string>
    <string name="second_initial">s</string>
    <string name="export_file">Export File</string>
    <string name="file_format">File format</string>
    <string name="recorded_routes_will_show_up_here">Recorded routes will show up here</string>
    <string name="start_recording_button">Start recording</string>
    <string name="route_deleted">Route Deleted</string>
    <string name="tap_to_undo">Tap to Undo</string>
    <string name="use_iso_date_for_filename">Use ISO date for filename</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="export">Export</string>
    <string name="export_selected">Export Selected</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="download">Download</string>
    <string name="download_location_info">Choosing Download will export the files to the Downloads folder of this device.</string>
    <string name="toggle_map_type">Toggle map type</string>
    <string name="delete_route">Delete route</string>
    <string name="rename_route">Rename route</string>
    <string name="recording_stopped">Recording Stopped</string>
    <string name="recording_timeout_description">The recording service has been stopped by the Android system. Open the app to resume recording your route.</string>

</resources>
