<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/current_recording_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_surfaceVariant"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:clickable="true"
    android:focusable="true">

    <TextView android:id="@+id/current_rec_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:textAlignment="viewStart"
        android:layout_marginBottom="2dp"
        android:textSize="14sp"
        android:textColor="@color/md_onSurfaceVariant"
        android:text="@string/recording_in_progress"/>

    <TextView
        android:id="@+id/route_title_tv"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:minLines="1"
        android:maxLines="2"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:textColor="@color/md_onSurfaceVariant"
        app:layout_constraintBottom_toTopOf="@id/add_wpt_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_rec_header"
        android:ellipsize="end"/>

    <Button
        android:id="@+id/add_wpt_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_waypoint"
        android:textAllCaps="false"
        android:textColor="@color/button_text_on_surface"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playpause_btn"
        app:layout_constraintTop_toBottomOf="@+id/route_title_tv" />

    <Button
        android:id="@+id/playpause_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_recording"
        android:textAllCaps="false"
        android:textColor="@color/button_text_on_surface"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stop_btn"
        app:layout_constraintTop_toBottomOf="@+id/route_title_tv" />

    <Button
        android:id="@+id/stop_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_recording"
        android:textAllCaps="false"
        android:textColor="@color/button_text_on_surface"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_title_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>