<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:id="@+id/fragment_gpx_list"
    android:background="@color/md_background"
    tools:context="com.iboism.gpxrecorder.records.list.GpxListFragment">

    <androidx.recyclerview.widget.RecyclerView android:id="@+id/gpx_listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/md_background"
        android:clipToPadding="false"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gpx_nav_title"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/nav_bar_surface"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gpx_listView"
        />

    <TextView android:id="@+id/gpx_nav_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:lines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/on_nav_bar_surface"
        android:background="@color/nav_bar_surface"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:text="@string/gpx_recorder"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <Button android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/cancel"
        android:textColor="@color/on_nav_bar_surface"
        app:layout_constraintEnd_toStartOf="@id/list_nav_overflow_button"
        app:layout_constraintTop_toTopOf="@id/gpx_nav_title"
        app:layout_constraintBottom_toBottomOf="@id/gpx_nav_title"
        android:visibility="gone"
        />

    <Button android:id="@+id/select_all_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/select_all"
        android:textColor="@color/on_nav_bar_surface"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintTop_toTopOf="@id/gpx_nav_title"
        app:layout_constraintBottom_toBottomOf="@id/gpx_nav_title"
        android:visibility="gone"
        />

    <Button android:id="@+id/export_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:textColor="@color/on_nav_bar_surface"
        android:text="@string/export"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintTop_toTopOf="@id/gpx_nav_title"
        app:layout_constraintBottom_toBottomOf="@id/gpx_nav_title"
        />

    <ImageButton android:id="@+id/list_nav_overflow_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="4dp"
        android:src="@drawable/ic_more"
        android:elevation="5dp"
        android:background="@android:color/transparent"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/gpx_listView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/on_nav_bar_surface" />

    <TextView android:id="@+id/placeholder_routes_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:text="@string/recorded_routes_will_show_up_here"
        android:textAlignment="center"
        android:textColor="@color/md_onBackgroundTertiary"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/guideline_center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView android:id="@+id/placeholder_routes_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_route"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/md_onBackgroundTertiary" />

    <androidx.constraintlayout.widget.Guideline android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/export_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/md_onSecondary"
        app:backgroundTint="@color/md_secondary"
        android:text="@string/export_selected"
        android:textColor="@color/md_onSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:visibility="gone"
        android:contentDescription="@string/start_recording_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/md_onSecondary"
        app:backgroundTint="@color/md_secondary"
        app:srcCompat="@drawable/ic_near_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/start_recording_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
