<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/current_recording_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:paddingTop="6dp"
    android:paddingBottom="20dp"
   >

    <TextView
        android:id="@+id/current_rec_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/recording_in_progress"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/route_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text=""
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/current_rec_header"
        app:layout_constraintStart_toStartOf="@id/current_rec_header"
        app:layout_constraintTop_toBottomOf="@id/current_rec_header" />

    <Button
        android:id="@+id/add_wpt_btn"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/add_waypoint"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:tint="@android:color/black"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/playpause_btn"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:text="@string/pause_recording"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:tint="@android:color/black"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_wpt_btn" />

    <Button
        android:id="@+id/stop_btn"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:text="@string/stop_recording"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:tint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playpause_btn" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/stop_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_title_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>