<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/current_recording_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_surface">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/nav_bar_surface"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/map_view"
        />

    <TextView
        android:id="@+id/current_rec_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/recording_in_progress"
        android:textAlignment="viewStart"
        android:textColor="@color/on_nav_bar_surface"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="6dp"
        />

    <TextView
        android:id="@+id/route_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text=""
        android:textAlignment="viewStart"
        android:textColor="@color/on_nav_bar_surface"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/current_rec_header"
        app:layout_constraintStart_toStartOf="@id/current_rec_header"
        app:layout_constraintTop_toBottomOf="@id/current_rec_header" />

    <Button
        android:id="@+id/add_wpt_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_waypoint"
        android:textAllCaps="false"
        android:textColor="@color/button_text_on_surface"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playpause_btn"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <Button
        android:id="@+id/playpause_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_recording"
        android:textAllCaps="false"
        android:textColor="@color/button_text_on_surface"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/stop_btn" />

    <Button
        android:id="@+id/stop_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_recording"
        android:textAllCaps="false"
        android:textColor="@color/button_text_on_surface"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_title_tv" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.925" />

</androidx.constraintlayout.widget.ConstraintLayout>