<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:paddingTop="24dp"
    android:paddingBottom="12dp"
    android:paddingHorizontal="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/export_title_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:text="@string/export_file"
        android:textColor="@color/md_onSurface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/format_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/file_format"
        android:textColor="@color/md_onSurface"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/format_selector_spinner"
        app:layout_constraintBottom_toBottomOf="@id/format_selector_spinner"
        android:layout_marginStart="16dp"
        />

    <Spinner
        android:id="@+id/format_selector_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:foregroundGravity="right"
        android:gravity="end"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/format_tv"
        app:layout_constraintTop_toBottomOf="@id/export_title_tv" />

    <Button
        android:id="@+id/export_share_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/format_selector_spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/center_x"
        android:layout_marginTop="16dp"
        android:textColor="@color/button_text_on_surface"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/share"
        />

    <Button
        android:id="@+id/export_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/center_x"
        app:layout_constraintTop_toBottomOf="@id/format_selector_spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:textColor="@color/button_text_on_surface"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/save_to_device"
        />

    <ProgressBar
        android:id="@+id/export_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/format_selector_spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:indeterminateTint="@color/md_primary"
        android:visibility="gone"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_x"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5"
        />

</androidx.constraintlayout.widget.ConstraintLayout>